sfdx-source/packaged/main/core/objects/OrganizationProfile__c/OrganizationProfile__c.object-meta.xml
<CustomObject>
    <description>Configure and manage organization profiles. Profiles are used when generating invoice PDFs to populate the sender information.</description>
    <label>Organization Profile</label>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>