sfdx-source/packaged/main/core/objects/OrganizationProfile__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bank Account details for this organization profile, used for invoice PDF generation.</description>
    <label>Bank Account</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>Organization Profiles</relationshipLabel>
    <relationshipName>OrganizationProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>