sfdx-source/packaged/main/core/objects/OrganizationProfile__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Address City for this organization profile that will be displayed on generated PDFs</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>