sfdx-source/packaged/main/core/objects/OrganizationProfile__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Address Country for this organization profile that will be displayed on generated PDFs</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>