sfdx-source/packaged/main/core/objects/OrganizationProfile__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Primary contact email for this organization profile that will be displayed on generated PDFs</description>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>