sfdx-source/packaged/main/core/objects/OrganizationProfile__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <description>Activates this profile to use as default, if the user does not have a specific profile configured.</description>
    <inlineHelpText>Use this profile as default for all users</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>