sfdx-source/packaged/main/core/objects/OrganizationProfile__c/fields/VATNumber__c.field-meta.xml
<CustomField>
    <fullName>VATNumber__c</fullName>
    <description>VAT Number for this organization profile that will be displayed on generated PDFs</description>
    <inlineHelpText>VAT Number with Country Code (i.e. DE)</inlineHelpText>
    <label>VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>