sfdx-source/packaged/main/core/objects/OrganizationProfile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsDefault__c</columns>
    <columns>OrganizationName__c</columns>
    <columns>VATNumber__c</columns>
    <columns>Street__c</columns>
    <columns>PostalCode__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>